--- a/NGES-6b-Gurobi.vcxproj
+++ b/NGES-6b-Gurobi.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="ProblemData.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Benders.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Models.cpp" />
     <ClCompile Include="Modules.cpp" />
