--- a/NGES-6b-Gurobi.vcxproj.filters
+++ b/NGES-6b-Gurobi.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="Print.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Benders.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
